--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -37,7 +37,8 @@
   <section id="about">
     <div class="container">
       <h2>About Me</h2>
-      <p>Hello, I'm Hrithika Shetty. I am a web developer and a passionate learner. When I’m not busy coding, I enjoy photography, reading, and traveling. I believe in continuous learning and am always looking for new challenges to improve my skills. Feel free to connect with me on GitHub and LinkedIn.</p>
+      <p>Hello, I am Hrithika Shetty, currently pursuing a Bachelor's degree in Computer Science Engineering at Sir M. Visvesvaraya Institute of Technology (Sir MVIT).</p>
+      <p>I am a passionate learner. When I’m not busy coding, I enjoy photography, reading, and traveling. I believe in continuous learning and am always looking for new challenges to improve my skills. Feel free to connect with me on GitHub and LinkedIn.</p>
       <p>Please don't hesitate to connect with me on every major social media platform with my username @HrithikaShetty.</p>
     </div>
   </section>
